--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <head>
 </head>
 <body>
-<iframe width="933" height="700" src="https://app.blob.core.windows.net/embed/snapshotEmbedHost.html?embedId=eyJjdWx0dXJlSW5mbyI6ImVuLWNhIn0=" frameborder="0"></iframe>
+<iframe width="933" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiNTk0ZTZhYWItYTE0ZS00ODgzLWE5NzctZDMzYTZiNDk0NjcwIiwidCI6ImI4ZjkzMGNhLWViZWMtNDQ3ZS05NzcwLTg1MmI1NDg3MTQ3MyIsImMiOjN9" frameborder="0"></iframe>
 </body>
 </html>
