adding appinsights script
adding appinsights script

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
 <head>
+    <script type="text/javascript">
+        var appInsights=window.appInsights||function(config){
+            function r(config){t[config]=function(){var i=arguments;t.queue.push(function(){t[config].apply(t,i)})}}var t={config:config},u=document,e=window,o="script",s=u.createElement(o),i,f;for(s.src=config.url||"//az416426.vo.msecnd.net/scripts/a/ai.0.js",u.getElementsByTagName(o)[0].parentNode.appendChild(s),t.cookie=u.cookie,t.queue=[],i=["Event","Exception","Metric","PageView","Trace"];i.length;)r("track"+i.pop());return r("setAuthenticatedUserContext"),r("clearAuthenticatedUserContext"),config.disableExceptionTracking||(i="onerror",r("_"+i),f=e[i],e[i]=function(config,r,u,e,o){var s=f&&f(config,r,u,e,o);return s!==!0&&t["_"+i](config,r,u,e,o),s}),t
+        }({
+            instrumentationKey:"6af4d3dd-d375-49fd-ac83-24e2cce155f3"
+        });
+        
+        window.appInsights=appInsights;
+        appInsights.trackPageView();
+    </script>  
 </head>
 <body>
 <iframe width="933" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiNTk0ZTZhYWItYTE0ZS00ODgzLWE5NzctZDMzYTZiNDk0NjcwIiwidCI6ImI4ZjkzMGNhLWViZWMtNDQ3ZS05NzcwLTg1MmI1NDg3MTQ3MyIsImMiOjN9" frameborder="0"></iframe>
