--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     </script>  
 </head>
 <body>
-<iframe width="1200" height="820" src="https://app.powerbi.com/view?r=eyJrIjoiNTk0ZTZhYWItYTE0ZS00ODgzLWE5NzctZDMzYTZiNDk0NjcwIiwidCI6ImI4ZjkzMGNhLWViZWMtNDQ3ZS05NzcwLTg1MmI1NDg3MTQ3MyIsImMiOjN9" frameborder="0"></iframe>
+
+<iframe width="1200" height="820" src="https://app.blob.core.windows.net/embed/snapshotEmbedHost.html?embedId=eyJjdWx0dXJlSW5mbyI6ImVuLVVTIn0=" frameborder="0"></iframe>
+
 </body>
 </html>
